# research-agent

./: .gitignore  AGENTS.md  README.md  daily_email.py  graph.py  main.py  outlook_mcp.py  pyproject.toml  rag.py  schedular.py  scheduler.py  threads.db  threads.db-shm  threads.db-wal  threads.txt  tool.py  tools.py
tests/: test_graph.py  test_main_memory.py  test_tool_local_rag.py  test_tool_save.py
