[project]
name = "news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "langchain-core",
    "langchain-deepseek",
    "langgraph",
    "mcp",
    "modelscope",
    "msal",
    "pydantic",
    "pytest",
    "python-dotenv",
    "requests",
    "sentence-transformers",
    "tavily-python",
    "torch",
]
